--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
@@ -17,11 +17,12 @@
 
 %%%%% Document Start %%%%%
 \begin{document}
+
 \maketitle
 
 \begin{frame}{Outline}
     \setbeamertemplate{section in toc}[sections numbered]
-    \tableofcontents
+    \tableofcontents[hideallsubsections]
 \end{frame}
 
 \input{background.tex}
