--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
@@ -1,5 +1,5 @@
 %%%%% Please set the path to 'beamer' directory in your environment %%%%%
-\newcommand{\beamerDir}[0]{C:/Users/atsushi/Documents/workspace/env/Beamer/beamer/beamer/}
+\newcommand{\beamerDir}[0]{/mnt/c/Users/atsushi/Documents/workspace/env/Beamer/beamer/beamer/}
 
 
 %%%%% Load setting %%%%%
